--- a/sushishop.html
+++ b/sushishop.html
@@ -30,24 +30,21 @@
                 <a class="nav-link" href="#">Delivery</a>
               </li>
               <li class="nav-item">
-                <button class="btn-order">Order Now</a>
+                <button class="nav-link btn-order">Order Now</a>
               </li>
             </ul>
           </div>
         </div>
     </nav>
-
     <section class="header">
         <div class="header-content">
-            <div class="d-flex justify-content-center">
+            <div class="container d-flex align-items-center">
                 <div class="head-content">
-                    <h1>Your Favourite Sushi, Love it !!!</h1>
-                    <p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p1>
+                    <h1>Your Favorite Sushi Delivered Fast</h1>
+                    <p>Nemo voluptatem est et consectetur. Quod nihil non numquam omnis </p>
                     <button class="btn-download">Download APP</button>
                 </div>
             </div>
-
-
         </div>
     </section>
       
